# module_file-structure-tool

./: DISCLAIMER.MD  LICENSE  README.md  __init__.py  main.py  pyproject.toml  requirements.txt  setup.py
docs/: EXAMPLE_file_structure_report.txt  README  report_of_files.md
models/: __init__.py  base.py  directory.py  file.py  file_structure.py  main.py
reports/: generate_reports.py
schemas/: file_structure_schema.json
services/: __init__.py  json_crud.py
templates/: sample_file_structure.json
tools/: __init__.py  file_structure_tool.py
utils/: __init__.py  decorators.py  logger.py
